# meson-structure

./: .gitignore  .gitmodules  README.md  csv_data.md  pyproject.toml  requirements-campaign.txt  requirements.txt
analysis/: README.md  __main__.py  analysis-2026-07.yaml  analysis.yaml  campaign-2026-06-saveall.yaml  campaign-2026-06-stv.yaml  campaign-local-msf.yaml  campaign.yaml  run.py
analysis/acceptance/: aa_helpers.py  analysis_scripts.py  analyze-df.ipynb  background-plot.ipynb  count_lambda_detection.py  meta.yaml  plot_detector_acceptance.py  plot_lambda_endpoints.py  plot_pion_hits.py  plot_proton_hits.py  runner.py
analysis/antonio_scripts/: compare_reco_methods.py  pimin_acceptance_plots.py  prot_acceptance_plots.py  vertex_plots.py
analysis/avnish_scripts/: .gitignore  check_t_reconstruction_four_vec.ipynb  compare_reco_mc.py  compare_reco_mc_differences2.py  compare_reco_mc_differences3.py  reco_t.ipynb
analysis/cpp-example/: test_4eic.cxx
analysis/csv_mc_dis_analysis/: meta.yaml  note.txt  plot_mc.py  runner.py
analysis/csv_mcpart_lambda/: lambda_decay.py  runner.py
analysis/csv_reco_dis_analysis/: beam_t_error.py  csv_reco_dis_analysis.py  reco_dis_all.py  scattered_electron.py  t_analysis.py
analysis/edm4hep_lambda/: CMakeLists.txt  README.md  acceptance.cxx  analysis_2026-03.10x100.sh  analysis_26-03.10x100.sh  analysis_26-03_saveall.10x100.sh  analysis_26-04.10x100.sh  analysis_26-04_longtv.sh  analysis_26-04_notv.sh  analysis_26-04_saveall.10x100.sh  mcpart_lambda.cxx  meta.yaml  run_ifarm_mcpart_lambda_edm4hep.sh  runner.py
analysis/edm4hep_mcpart_lambda/: CMakeLists.txt  README.md  mcpart_lambda.cxx
analysis/eg-beams-compare/: eg-beam-compare-analysis.py  eg_beam_compare_analysis.py  meta.yaml  runner.py
analysis/eg-kinematics/: README_JSON_HISTOGRAMS.md  analysis_26-04_notv.sh  echarts_histogram_viewer.html  eg-kinematics.py  eg_kinematics.py  meta.yaml  runner.py
analysis/gary_scripts/: Analysis.C  KLambdaCrossSection.C  ProcessHepMCKLambda.C  ProcessMCMatchedKLambda.C  README  README.md  binning.C  meta.yaml  runner.py
analysis/launcher/: __init__.py  config.py  discover.py  dispatch.py
analysis/multicalo-lambda/: config.py  io.py  meta.yaml  physics.py  plotting.py  run.py  runner.py  studies_kaon_sf.py  studies_lambda.py  utils.py
analysis/ppim-combinatorics/: train_true_lambda_dnn.py
analysis/zdc-lambda/: CMakeLists.txt  mclam_to_csv.cxx  test_edm4eic.cxx
containers/: eicrecon_custom.def
csv_convert/: CMakeLists.txt  analyse_ppim_combinatorics.py  config.yaml  convert_acceptance.10x100.sh  convert_acceptance.18x275.sh  convert_acceptance.5x41.sh  convert_campaign.10x100.slurm.sh  convert_campaign.10x130.slurm.sh  convert_campaign.18x275.slurm.sh  convert_campaign.5x41.slurm.sh  convert_campaign.py  convert_campaign.slurm.sh  convert_combinatorics.18x275.sh  convert_edm4eic.py  convert_edm4hep.py  csv_edm4hep_acceptance.cxx  csv_edm4hep_acceptance_npi0.cxx  csv_edm4hep_acceptance_ppim.cxx  csv_edm4hep_combinatorics_ppim.cxx  csv_edm4hep_ppim_combinatorics.cxx  csv_mc_dis.cxx  csv_mcdis.cxx  csv_mcpart_lambda.cxx  csv_reco_dis.cxx  csv_reco_ff_lambda.cxx  open_multiple_example.py  pyproject.toml
csv_convert/.devcontainer/: devcontainer.json
docker/: Dockerfile
docs/: analysis.md  background.md  campaign.md  campaigns.md  data-csv.md  data.md  edm4eic-diagram.md  edm4eic-tree.md  edm4eic_lambda.md  edm4hep-tree.md  eg-dynamic-plots.md  eg-plots.md  index.md  json-histogram-guide.md  kinematics-results.md  learning.md  manage-website.md  package-lock.json  package.json  publications.md  test.md
docs/.vitepress/: config.mts
docs/campaign-2025-08/: acceptance.md  acceptance_ff.md  campaign-2025-08.md  campaign.md  eg-comparison.md  eg-plots.md  eg-plots2.md
full-sim-pipeline/: 10_create_afterburner_jobs.py  11_create_background_jobs.py  20_create_npsim_jobs.py  21_create_npsim_saveall_jobs.py  22_create_npsim_background_jobs.py  23_create_npsim_stv_jobs.py  30_create_eicrecon_jobs.py  40_create_csv_dd4hep_jobs.py  40_create_csv_jobs.py  41_create_csv_dd4hep_saveall_jobs.py  41_create_csv_eicrecon_jobs.py  42_create_csv_eicrecon_jobs.py  50_create_analysis_jobs.py  51_create_root_analysis_jobs.py  README.md  README_SIMPLE.md  Snakefile.smk  config-campaign-2025-10.yaml  config-campaign-2026-02.yaml  config-campaign-2026-04_longtv.yaml  config-campaign-2026-04_saveall.yaml  config-campaign-26-04.yaml  config-campaign-26-05-background.yaml  config-campaign-26-05.yaml  config-campaign-26-06-background.yaml  config-campaign-26-06-official.yaml  config-campaign-26-06-saveall.yaml  config-campaign-26-06-stv.yaml  config-campaign-26-07.yaml  config.yaml  create_afterburner_jobs.py  create_csv_jobs.py  create_jobs.py  create_npsim_jobs.py  eg_analysis.sh  example_job_runner_advanced.py  example_job_runner_simple.py  fix_and_test.sh  job_creator.py  job_runner.py  (+4 more)
tools/: csv_b2root.py  eic_complaint_rename.py  padding_rename.py
tutorials/: CMakeLists.txt  cpp_01_read_edm4eic.cxx  cpp_02_ff_lambda.cxx  cpp_03_hits_edm4eic.cxx  csv_mcpart_lambda.cxx  py_csv_01_lambda.ipynb  py_edm4eic_05_sim_tracker_hits.py
tutorials/.devcontainer/: devcontainer.json
(+171 files in other folders)
