[project]
name = "meson-structure"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "notebook",
    "pandas-stubs",
    "uproot",
    "boost-histogram",
    "hist[plot]",
    "matplotlib",
    "json_fix",
    "scipy",
    "numpy",
    "awkward",
    "mplhep",
    "sh",
    "rich",
    "vector",
    "pandas",
]
